# SemiCRFSegmentation

./: .gitignore  CMakeLists.txt  README.md  command.txt
demo_data/: dev.ctb60.nnpos  dev.ctb60.nnpos.debug  option.debug  test.ctb60.nnpos  test.ctb60.nnpos.debug  weibo.noface.pku.addUNKWord.50d.vect
src/: CMakeLists.txt  NNCRFSegmentor.cpp  NNCRFSegmentor.h  NNSemiCRFSegmentor.cpp
src/NNCRFSegmentor/: CMakeLists.txt  NNCRFSegmentor.cpp  NNCRFSegmentor.h
src/NNCRFSegmentor/model/: ComputionGraph.h  Driver.h  ModelParams.h
src/NNHypridCRFSegmentor/: CMakeLists.txt  NNHypridCRFSegmentor.cpp  NNHypridCRFSegmentor.h
src/NNHypridCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h  NNHypridCRF.h
src/NNSEmbHypridCRFSegmentor/: CMakeLists.txt  NNSEmbHypridCRFSegmentor.cpp  NNSEmbHypridCRFSegmentor.h
src/NNSEmbHypridCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNSEmbSemiCRFSegmentor/: CMakeLists.txt  NNSEmbSemiCRFSegmentor.cpp  NNSEmbSemiCRFSegmentor.h
src/NNSEmbSemiCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/NNSemiCRFSegmentor/: CMakeLists.txt  NNSemiCRFSegmentor.cpp  NNSemiCRFSegmentor.h
src/NNSemiCRFSegmentor/model/: ComputionGraph.h  Driver.h  HyperParams.h  ModelParams.h
src/basic/: BMESSegmentation.h  Example.h  Instance.h  InstanceReader.h  InstanceWriter.h  NNCRF.h  NNSEmbHypridCRF.h  NNSEmbSemiCRF.h  NNSemiCRF.h  Options.h  Pipe.h  RNNSegmentation.h  Segmentation.h
